--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/scss/bootstrap';
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Cairo Play', sans-serif;
+}
+
+
+body{
+    margin:0 10%  0 10% ;
+}
