--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
         <app-nav-bar class='header_nav'></app-nav-bar>
 </header>
 <main>
-        <app-main></app-main>
+        <app-main class="main"></app-main>
 </main>
