--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 8px;
-    border-bottom: 1px solid lightblue;
+    //border-bottom: 1px solid lightblue;
     .header_searcher{
         display: flex;
         flex-direction: column;
@@ -13,4 +13,11 @@
         display: flex;
         justify-content: flex-end;
     }
+}
+.main{
+    display: flex;
+    width: 100%;
+    height: 90vh;
+    border-radius: 10px;
+    border: solid 1px rgb(232, 232, 232);
 }
