--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<header class='header'>
-        <app-apick class='header_title'></app-apick>
-        <app-searcher class="header_searcher"></app-searcher>
-        <app-nav-bar class='header_nav'></app-nav-bar>
-</header>
-<main>
-        <app-main class="main"></app-main>
-</main>
+<app-header class="header"></app-header>
+<router-outlet></router-outlet>
