--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,26 @@
 body{
     margin:0 10%  0 10% ;
 }
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 8px;
+    //border-bottom: 1px solid lightblue;
+    .header_searcher{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+
+    }
+    .header_nav{
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+.main{
+    display: flex;
+    width: 100%;
+    height: 90vh;
+    border-radius: 10px;
+    border: solid 1px rgb(232, 232, 232);
+}
