fetching apicks working good

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,8 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
 }
+
+.list_button:hover{
+    background-color: black;
+    color: white;
+}
