apick list in your apicks created

--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -1,3 +1,11 @@
 <main class="main">
-    <p>asdasd</p>
+    <div class="main_apis">
+        <h2 class="apis_title">My Apicks</h2>
+        <div class="apis_list">
+           <app-myapick *ngFor="let api of data" [data]="api"></app-myapick>
+        </div>
+        <button class="apis_create">Create new Apick!</button>
+    </div>
+    <div class="main_form"></div>
+    <div class="main_json"></div>
 </main>
