--- a/src/app/api-data/api-data.component.html
+++ b/src/app/api-data/api-data.component.html
@@ -1,8 +1,6 @@
-<div class="apick">
-    <img class="apick_image" src="https://cdn-icons-png.flaticon.com/512/263/263100.png" alt=" apic">
-    <div class="">
-        <h2>Titulo</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore saepe, ut nisi laudantium dignissimos quam quas praesentium explicabo, earum ex temporibus nulla error eos. Rem incidunt tempore adipisci. Soluta, aperiam.</p>
-        <button><a href="/otrolugar"></a></button>
-    </div>
+<img class="apick_image" src="https://cdn-icons-png.flaticon.com/512/263/263100.png" alt=" apic">
+<div class="apick_text">
+    <h2>Titulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore saepe, ut nisi laudantium dignissimos quam quas praesentium explicabo, earum ex temporibus nulla error eos. Rem incidunt tempore adipisci. Soluta, aperiam.</p>
 </div>
+<button><a routerLink="/otrolugar"></a></button>
