--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">
+<a routerLink="/" class="title">
     <span class="title_main">API</span>
     <span class="title_second">ck</span>
-</h1>
+</a>
