--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <main class="main">
     <div id="normalApis" >
-        <app-api-data class="api"></app-api-data>
+        <app-api-data class="apick"></app-api-data>
     </div>
     <div id="valoratedApis">
     
