--- a/src/app/myapick/myapick.component.html
+++ b/src/app/myapick/myapick.component.html
@@ -1,5 +1,7 @@
-<div class="apick">
-    <img class="apick_img" src={{data.imageUrl}} alt="">
-    <h4 class="apick_title">{{data.title}}</h4>
-    <button class="btn apick_edit" id={{data._id}}><fa-icon [icon]="faChevronRight"></fa-icon></button>
+<div class="myapick">
+  <img class="myapick_img" src="{{ data.imageUrl }}" alt="" />
+  <h4 class="myapick_title">{{ data.title }}</h4>
+  <button class="btn myapick_edit" id="{{ data._id }}">
+    <fa-icon [icon]="faChevronRight"></fa-icon>
+  </button>
 </div>
