--- a/src/app/searcher/searcher.component.html
+++ b/src/app/searcher/searcher.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="searcher">
     <input class="searcher_input" type="text" name="search" placeholder="Buscar por nombre o categoria">
     <button class="btn searcher_button"><fa-icon [icon]="faMagnifyingGlass"></fa-icon></button>
 </form>
