--- a/src/app/myapick/myapick.component.html
+++ b/src/app/myapick/myapick.component.html
@@ -1,5 +1,5 @@
 <div class="myapick">
-  <img class="myapick_img" src="{{ data.imageUrl }}" alt="" />
+  <img class="myapick_image" src="{{ data.imageUrl }}" alt="" />
   <h4 class="myapick_title">{{ data.title }}</h4>
   <button class="btn myapick_edit" id="{{ data._id }}">
     <fa-icon [icon]="faChevronRight"></fa-icon>
