front classname error solved

--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <div class="main_apis">
+  <div class="main_apicks">
     <h2 class="apis_title">My Apicks</h2>
     <div class="apis_list">
       <app-myapick *ngFor="let api of data" [data]="api"></app-myapick>
