--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,4 +168,9 @@ body {
     display: flex;
     width: 30%;
   }
+  .main_apicks{
+    width: 30%;
+    padding: 0 10px;
+    border-right: solid 1px lightgray;
+  }
 }
