--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-<app-apick class='header_title'></app-apick>
+<app-title class='header_title'></app-title>
 <app-searcher class="header_searcher"></app-searcher>
 <app-nav-bar class='header_nav'></app-nav-bar>
