--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -4,8 +4,40 @@
     <div class="apis_list">
       <app-myapick *ngFor="let api of data" [data]="api"></app-myapick>
     </div>
-    <button class="btn apis_create">Create new Apick!<fa-icon class="apis_arrow" [icon]="faChevronRight"></fa-icon></button>
+    <button class="btn apis_create" (click)="openCreator()">
+      Create new Apick!<fa-icon
+        class="apis_arrow"
+        [icon]="faChevronRight"
+      ></fa-icon>
+    </button>
   </div>
-  <div class="main_form"></div>
+  <div class="main_form">
+    <form class="creator"> 
+      <input
+        class="creator_input form-control"
+        type="text"
+        placeholder="Title for your apick!"
+        formControlName="title"
+      />
+      <textarea
+        class="creator_input form-control"
+        type="text"
+        placeholder="Description for your apick!"
+        formControlName="description"
+      ></textarea>
+      <input
+        class="creator_input form-control"
+        type="text"
+        placeholder="Link to a image icon"
+        formControlName="image"
+      />
+    </form>
+    <div class="creator_endpoint">
+      <h4 class="creator_title">CREATED ENDPOINTS</h4>
+      <div>
+        Aca iran los endpoints
+      </div>
+    </div>
+  </div>
   <div class="main_json"></div>
 </main>
