apick view created

--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -34,7 +34,7 @@
     </form>
     <div class="creator_endpoint">
       <h4 class="creator_title">CREATED ENDPOINTS</h4>
-      <div>
+      <div class="creator_">
         Aca iran los endpoints
       </div>
     </div>
