--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -1,4 +1,19 @@
 <main class="main">
-    <p>apiview works!</p>
-
+    <div class="main_view">
+        <div class="apick">
+            <img class="apick_image" src={{apick.imageUrl}} alt="apic">
+            <div class="apick_text">
+                <h2 class="apick_title">{{apick.title}}</h2>
+                <p class="apick_description">{{apick.description}}</p>
+            </div>
+        </div>
+        <div class="endpoints">
+            <h3>ENDPOINTS</h3>
+            <p *ngFor="let endpoint of apick.endpoint">{{endpoint}}</p>
+        </div>
+    </div>
+    <div class="main_json">
+        respuesta json
+    </div>
+    
 </main>
