--- a/src/app/searcher/searcher.component.html
+++ b/src/app/searcher/searcher.component.html
@@ -1,4 +1,3 @@
 <form class="searcher">
-    <input class="searcher_input" type="text" name="search" placeholder="Buscar por nombre o categoria">
-    <button class="btn searcher_button"><fa-icon [icon]="faMagnifyingGlass"></fa-icon></button>
+    <input class="searcher_input" type="text" id="search" name="search" placeholder="Buscar por nombre" [(ngModel)]="query" (input)="goSearch(query)">
 </form>
