link to active endpoints in apiview fixed and improved styles

--- a/src/app/api-data/api-data.component.html
+++ b/src/app/api-data/api-data.component.html
@@ -3,4 +3,4 @@
     <h2 class="apick_title">{{apickData.title}}</h2>
     <p class="apick_description">{{apickData.description}}</p>
 </div>
-<button class="btn apick_button"><a routerLink={{apickData.url}}><fa-icon [icon]="faChevronRight"></fa-icon></a></button>
+<button class="btn apick_button"><a routerLink={{apickData.url}}><fa-icon [icon]="faChevronRight" class="text-dark"></fa-icon></a></button>
