--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -9,10 +9,11 @@
         margin-left: 20px;
     }
     .list_button{
-        border-radius: 1.8px;
-        border: 1px solid rgb(128, 128, 128);
-        padding: 2px 40px;
-        font-weight: 400;
+        border-radius: 2.8px;
+        padding: 5px 49px;
+        font-weight: 700;
+        border: solid 1px white;
+        color: white;
     }
 }
 
