--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,26 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Cairo Play", sans-serif;
+  font-family: "Space Grotesk", sans-serif;
 }
-
+html{
+  background-image: url(https://p4.wallpaperbetter.com/wallpaper/607/724/1017/material-design-abstract-hd-wallpaper-preview.jpg);
+  background-size: cover;
+  
+}
 body {
   margin: 0 10% 0 10%;
+  background-color: #ffffff00;
+  backdrop-filter: opacity(0);
+  backdrop-filter: blur(10px);
+  border: solid 2px gray;
+  border-radius: 10px;
 }
 .header {
   display: flex;
   justify-content: space-between;
   padding-bottom: 8px;
+  flex-wrap: wrap;
   .header_searcher {
     display: flex;
     flex-direction: column;
@@ -31,6 +41,7 @@ body {
   height: 90vh;
   border-radius: 10px;
   border: solid 1px rgb(232, 232, 232);
+  background: rgba(156, 156, 156, 0.7);
   .main_apis {
     width: 70%;
     height: 100%;
@@ -130,6 +141,8 @@ body {
   border-bottom: solid 1px lightgray;
   padding: 20px 60px 20px 0px;
   overflow: hidden;
+  background-color: rgba(232, 232, 232,0.7);
+  border-radius: 10px;
   .apick_image {
     height: 100%;
   }
@@ -156,9 +169,10 @@ body {
 }
 .searcher {
   .searcher_input {
-    width: 300px;
-    padding: 5px 20px;
+    width: 400px;
+    padding: 5px 16px;
     border: solid 0.8px gray;
+    border-radius: 3px;
     &:hover {
       background-color: #f4fff1;
     }
@@ -182,6 +196,7 @@ body {
   font-weight: inherit;
   span {
     font-size: 3rem;
+    font-weight: bold;
   }
 }
 
@@ -207,5 +222,12 @@ body {
 }
 
 .active{
-  background-color: red;
+  background-color: rgba($color: red, $alpha: 0.5);
+}
+
+.modal-backdrop{
+  --bs-backdrop-opacity: 0.9;
+  left: -200px;
+  width: 200vw;
+  height: 100vh;
 }
