styles and auth service updated

--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -8,26 +8,5 @@
       Create new Apick!<fa-icon class="apis_arrow" [icon]="faChevronRight"></fa-icon>
     </button>
   </div>
-  <div class="main_form">
-    <form class="creator" [formGroup]="formCreator">
-      <input class="creator_input form-control" type="text" placeholder="Title for your apick!"
-        formControlName="title" />
-      <textarea class="creator_input form-control" type="text" placeholder="Description for your apick!"
-        formControlName="description"></textarea>
-      <input class="creator_input form-control" type="text" placeholder="Link to a image icon"
-        formControlName="image" />
-    </form>
-    <div class="creator_endpoint">
-      <h4 class="creator_title">CREATED ENDPOINTS</h4>
-      <div class="creator_">
-        Aca iran los endpoints
-      </div>
-    </div>
-  </div>
-  <div class="main_json">Aca van los Json
-    <form [formGroup]="formJson">
-      <textarea formControlName="docs"></textarea>
-      <button type="button" (click)="jsonValidator(formJson.value.docs)">Enviar</button>
-    </form>
-  </div>
+  <app-create-api class="main_creator"></app-create-api>
 </main>
