--- a/src/app/create-api/create-api.component.html
+++ b/src/app/create-api/create-api.component.html
@@ -1,1 +1,35 @@
-<p>create-api works!</p>
+<div class="main_form">
+  <form class="creator" [formGroup]="formCreator">
+    <input
+      class="creator_input form-control"
+      type="text"
+      placeholder="Title for your apick!"
+      formControlName="title"
+    />
+    <textarea
+      class="creator_input form-control"
+      type="text"
+      placeholder="Description for your apick!"
+      formControlName="description"
+    ></textarea>
+    <input
+      class="creator_input form-control"
+      type="text"
+      placeholder="Link to a image icon"
+      formControlName="image"
+    />
+  </form>
+  <div class="creator_endpoint">
+    <h4 class="creator_title">CREATED ENDPOINTS</h4>
+    <div class="creator_">Aca iran los endpoints</div>
+  </div>
+</div>
+<div class="main_json">
+  Aca van los Json
+  <form [formGroup]="formJson">
+    <textarea formControlName="docs"></textarea>
+    <button type="button" (click)="jsonValidator(formJson.value.docs)">
+      Enviar
+    </button>
+  </form>
+</div>
