create apick in development

--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="endpoints">
             <h3>ENDPOINTS</h3>
-            <p *ngFor="let endpoint of endpoints">localhost:3000/api/apick/{{apick._id}}{{endpoint.endpoint}}</p>
+            <p *ngFor="let endpoint of endpoints">localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
         </div>
     </div>
     <div class="main_json">
