--- a/src/styles.scss
+++ b/src/styles.scss
@@ -218,8 +218,10 @@ body {
 }
 .creator_json {
   width: 100%;
+  height: 70%;
   textarea {
     width: 100%;
+    height: 80%;
     background-color: black;
     color: white;
     font-size: 0.75em;
