--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -1,7 +1,7 @@
 <main class="main">
     <div class="main_view">
         <div class="apick">
-            <img class="apick_image" src={{apick.imageUrl}} alt="apic">
+            <img class="apick_image" src="{{apick.imageUrl}}" alt="apic">
             <div class="apick_text">
                 <h2 class="apick_title">{{apick.title}}</h2>
                 <p class="apick_description">{{apick.description}}</p>
