--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,7 +81,7 @@ body {
   .main_view {
     border-right: solid 1px lightgray;
     padding: 0 15px;
-    max-width: 60%;
+    width: 60%;
   }
   .main_creator {
     display: flex;
